--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "firebase": "^12.8.0",
+    "fuse.js": "^7.1.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
