--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@yudiel/react-qr-scanner": "^2.5.1",
     "firebase": "^12.8.0",
     "fuse.js": "^7.1.0",
     "jspdf": "^4.0.0",
