--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.7.0",
     "@yudiel/react-qr-scanner": "^2.5.1",
     "firebase": "^12.8.0",
     "fuse.js": "^7.1.0",
