--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@stripe/stripe-js": "^8.7.0",
     "@yudiel/react-qr-scanner": "^2.5.1",
     "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.0",
     "fuse.js": "^7.1.0",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "next": "16.1.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "stripe": "^20.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
